Removed websockets; added dynamic data endpoint
